--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.config.import=optional:configserver:http://localhost:8071/
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.access=unrestricted
 management.info.env.enabled=true
+management.endpoint.bean.enabled=true
 eureka.instance.preferIpAddress=true
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
